created folder structure

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,11 @@ bin-release/
 [Bb]in/
 
 # Other files and folders
-.settings/
+.settings
+.vscode
+__pycache__
+venv
+*.egg-info
 
 # Executables
 *.swf
